# jujumate

./: .gitignore  404.html  README.md  demo.cast  docs_hooks.py  index.html  landing.css  mkdocs.yml  noxfile.py  pyproject.toml  sitemap.xml  snapcraft.yaml
.github/: copilot-instructions.md
.github/workflows/: ci.yaml  docs.yaml  publish.yaml  tag-and-release.yaml
.opencode/agents/: design-tui-ux.md  engineering-reviewer.md  engineering-senior-developer.md  engineering-software-architect.md  qa-testing-specialist.md
changelog/: index.html
configuration/: index.html
docs/: configuration.md  index.md  installation.md  themes.md  usage.md
docs/stylesheets/: extra.css
guide/: configuration.md  index.md  installation.md  usage.md
installation/: index.html
landing/: index.html  landing.css
search/: search_index.json
src/jujumate/: __init__.py  __main__.py  app.py  app.tcss  config.py  log.py  palette.py  settings.py  theme_loader.py
src/jujumate/client/: juju_client.py  watcher.py
src/jujumate/models/: entities.py
src/jujumate/screens/: app_config_screen.py  app_config_screen.tcss  help_screen.py  help_screen.tcss  log_screen.py  log_screen.tcss  machine_detail_screen.py  machine_detail_screen.tcss  main_screen.py  offers_screen.py  offers_screen.tcss  relation_data_screen.py  relation_data_screen.tcss  secrets_screen.py  secrets_screen.tcss  settings_screen.py  settings_screen.tcss  storage_detail_screen.py  storage_detail_screen.tcss  theme_screen.py  theme_screen.tcss
src/jujumate/themes/: dark.yaml  monokai.yaml  solarized-dark.yaml  spacemacs.yaml  ubuntu.yaml
src/jujumate/widgets/: app_config_view.py  app_config_view.tcss  apps_view.py  apps_view.tcss  clouds_view.py  clouds_view.tcss  controllers_view.py  controllers_view.tcss  health_view.py  health_view.tcss  jujumate_header.py  jujumate_header.tcss  models_view.py  models_view.tcss  navigable_table.py  navigable_table.tcss  navigator_view.py  navigator_view.tcss  relation_data_view.py  relation_data_view.tcss  resource_table.py  resource_table.tcss  status_view.py  status_view.tcss  units_view.py  units_view.tcss
tests/: conftest.py  test_config.py  test_entities.py  test_health_view.py  test_juju_client.py  test_log.py  test_log_screen.py  test_machine_detail_screen.py  test_main_screen.py  test_navigator_view.py  test_palette.py  test_resource_table.py  test_settings.py  test_settings_screen.py  test_storage_detail_screen.py  test_theme_loader.py  test_views.py  test_watcher.py
themes/: index.html
usage/: index.html
