[project]
name = "jujumate"
version = "0.1.0"
description = "Terminal UI for Juju infrastructure orchestration"
readme = "README.md"
authors = [
    { name = "Jose C. Massón", email = "jose.masson@canonical.com" }
]
requires-python = ">=3.10"
dependencies = [
    "juju>=3.6.1.3",
    "textual>=8.0.0",
]

[project.scripts]
jujumate = "jujumate:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "nox>=2026.2.9",
    "nox-uv>=0.7.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
